# playhouse

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
playhouse/: io.py  models.py  ppo.py  pytorch.py  rl.py
playhouse/environments/: __init__.py
playhouse/environments/tetris/: __main__.py  eval.py  play.py  tetris.py  train.py  watch.py
playhouse/environments/tetris/tetris_rust/: Cargo.toml  pyproject.toml  tetris_rust.pyi
playhouse/environments/tetris/tetris_rust/src/: lib.rs  stub_gen.rs  tetris.rs  tetromino.rs
playhouse/extensions/: gae.cpp
playhouse/extensions/cuda/: gae.cu
playhouse/logger/: __init__.py  neptune.py  noop.py  protocol.py  wandb.py
playhouse/models/: cnn_policy.py  lstm.py  lstm_wrapper.py  mini.py  mini_policy.py
playhouse/sweep/: config.py  hyperparameters.py  protein.py  space.py
