[project]
name = "playhouse"
version = "0.1.0"
description = "Subset of PufferLib, ported for self-educational purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpytorch>=1.14.3",
    "gymnasium>=1.2.2",
    "neptune>=1.14.0",
    "numpy>=2.3.5",
    "raylib>=5.5.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tetris_rust",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]

[tool.uv.sources]
tetris_rust = { workspace = true }

[tool.uv.workspace]
members = ["playhouse/environments/tetris/tetris_rust"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pyo3-stubgen>=0.3.0",
    "ruff>=0.14.5",
]
