[package]
name = "tetris_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "tetris_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.27"
once_cell = "1.20"
pyo3 = "0.27"
pyo3-stub-gen = "0.17.1"
rand = "0.9.2"
raylib = "5.5.1"
rayon = "1.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
default = []

[[bin]]
name = "stub_gen"
path = "src/stub_gen.rs"
doc = false
required-features = []
