[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tetris_rust"
version = "0.1.0"
description = "Parallel Tetris environment"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/*.rs" }
]
